nuevo proyecto y corrección de errores

--- a/Generador de contraseñas/index.html
+++ b/Generador de contraseñas/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <main>
-        <article id="generador">
+        <section id="generador">
             <form  id="crearContraseña" name="crearContraseña" action="#" novalidate>
 
                 <h2>Crea tu contraseña aleatoria</h2>
@@ -24,7 +24,7 @@
                 </p>
                 <input type="reset" id="reset" value="Otra vez"/>
             </form>
-        </article>
+        </section>
     </main>
 </body>
 
